syntax = "proto3";

package protos;

service DistsortMaster {
  rpc WorkerReady (ReadyRequest) returns (ReadyReply) {}

  // Server-Side Streaming for Key Range
  rpc KeyRange (KeyRangeRequest) returns (KeyRangeReply) {}

  rpc PartitionComplete (PartitionCompleteRequest) returns (PartitionCompleteReply) {}

  rpc ExchangeComplete (ExchangeCompleteRequest) returns (ExchangeCompleteReply) {}

  rpc SortFinish (SortFinishRequest) returns (SortFinishReply) {}
}

message ReadyRequest {
  string workerName = 1;
  string workerIpAddress = 2;
}

message ReadyReply {}

message KeyRangeRequest {
  int32 numSamples = 1;
  repeated bytes samples = 2;
}

message KeyRangeReply {
  repeated bytes keyList = 1;
  repeated string workerIpList = 2;
}

message PartitionCompleteRequest {}
message PartitionCompleteReply {}

message ExchangeCompleteRequest {}
message ExchangeCompleteReply {}

message SortFinishRequest {}
message SortFinishReply {}